updated logic to properly register inference config